derse/tests/build/fail-01.stderr
error: proc-macro derive panicked
 --> tests/build/fail-01.rs:1:10
  |
1 | #[derive(derse::Serialize)]
  |          ^^^^^^^^^^^^^^^^
  |
  = help: message: only struct and enum are supported

error: unions cannot have zero fields
 --> tests/build/fail-01.rs:2:1
  |
2 | union T1 {}
  | ^^^^^^^^^^^
