derse/tests/build/fail-01.rs
#[derive(derse::Serialize)]
union T1 {}

fn main() {}
